--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "com.am1goo.bloodseeker",
-    "version": "0.0.2",
+    "version": "0.1.0",
     "displayName": "Bloodseeker",
-    "description": "Bloodseeker - easy-as-dumb toolkit to prevent any malicious injections in your Android apps. Beware of cheaters!",
+    "description": "Easy-as-dumb toolkit to prevent any malicious injections in your Android apps. Beware of cheaters!",
     "unity": "2020.3",
     "license": "GPL-3.0-or-later",
     "licensesUrl": "https://raw.githubusercontent.com/am1goo/bloodseeker-unity/main/LICENSE?token=GHSAT0AAAAAACMRDQHMQMJ4ECX6XJV3I2FCZNKZ3QA",
